# gradys-embedded

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/docs/: configuration.md  cross-node-communication.md  encapsulator-interface.md  mobility-and-telemetry.md  plugins-and-extensions.md  protocol-interface.md  runtime-model.md
examples/alternating_square/: protocol.py
examples/back_and_forth/: fleet.toml  protocol.py  runner.py
examples/simple/: ge.py  protocol.py  runner.py
examples/simple_follow/: follower_runner.py  leader_runner.py  main.py  protocol.py
gradys_embedded/encapsulator/: embbeded.py  embedded.py  interface.py
gradys_embedded/protocol/: __init__.py  interface.py  position.py
gradys_embedded/protocol/messages/: telemetry.py
gradys_embedded/protocol/plugin/: dispatcher.py  follow_mobility.py  mission_mobility.py  random_mobility.py  statistics.py
gradys_embedded/protocol/plugin/raft/: __init__.py
gradys_embedded/runner/: configuration.py  message_api.py  runner.py
