[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["gradys_embedded*"]

[project]
name = "gradys_embedded"
version = "0.0.1"
description = "Runs GrADyS-Sim nextgen protocols in real quadcopter"
keywords = ["mavlink", "http", "real", "gradys", "LAC", "PUC", "drone", "ardupilot", "GrADyS", "reactive"]
authors = [
    { name = "Francisco Meirelles Fleury", email = "franmeifleury@gmail.com" }
]
license = { file = "LICENSE.txt" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"

dependencies = [
    'fastapi>=0.115.4',
    'uvicorn>=0.32.0',
    'aiohttp>=3.9.0',
    'pydantic>=2.12.5'
]

[project.urls]
"Homepage" = "https://github.com/Project-GrADyS/gradys-embedded"